# assignment-scraper

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: f4c9abed6783_initial_migration_with_fixed_metadata_.py
examples/: chat_demo.py  zendriver_demo.py
monitoring/: prometheus.yml
src/: __init__.py  main.py
src/api/: __init__.py
src/api/models/: __init__.py  scraping_models.py
src/application/: __init__.py
src/application/use_cases/: __init__.py  scraping_use_cases.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  scraping.py
src/domain/repositories/: __init__.py  scraping_repository.py
src/domain/services/: __init__.py  scraper_service.py
src/infrastructure/: __init__.py
src/infrastructure/celery/: __init__.py  tasks.py  worker.py
src/infrastructure/database/: __init__.py  database.py  models.py
src/infrastructure/repositories/: __init__.py  scraping_repository_impl.py
src/infrastructure/services/: __init__.py  web_scraper_impl.py
